Styled the sign up form. Used the same colors as the website for continuity. Resized and updated margin top to clear the navbar on small devices and to make sure the button is within the form on smalll screens.

--- a/assets/style.css
+++ b/assets/style.css
@@ -225,22 +225,45 @@ footer {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin-top: 175px;
+  margin-top: 200px;
   padding: 20px;
 }
 
 .form-container {
-  background-color: white;
+  background-color: black;
+  background: linear-gradient(to bottom, #000000, #232222);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 600px;
-  height: 550px;
-  color: black;
+  height: 600px;
+  color: white;
+}
+
+.form-container h2 {
+  color: crimson; 
+  font-size: 2.5rem;
+  padding: 10px;
 }
 
 .form-content {
   font-size: 1.5rem;
   padding: 15px;
   margin: 15px;
+}
+
+.form-content input[type="text"],
+.form-content input[type="email"] {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid crimson;
+  outline: none;
+  box-shadow: none;
+  color: white;
+  font-size: 1.25rem;
+}
+
+button {
+  width: 200px;
+  padding: 10px;
 }
